@@ -1,3 +1,6 @@
+[B]1.8.4[/B]
+- Added: Runtime for tvshows - needs Krypton or newer
+
 [B]1.8.3[/B]
 - Update author name
 
